# Tokyo-PointCloud-PointNetpp-VAE

./: B_VAE.ipynb  README.md  VAE.ipynb  b3dm2glb.py  dataset2master.py  pyproject.toml
src/: B_VAE.ipynb  mesh2pointcloud_ply.py
