[tool.poetry]
name = "tokyo-pointcloud-pointnetpp-vae"
version = "0.1.0"
description = ""
authors = ["Davigbit <davidinossauro.bit@gmail.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
scipy = "^1.15.3"
matplotlib = "^3.10.3"
notebook = "^7.4.2"
ipykernel = "^6.29.5"
numpy = "^2.2.6"
trimesh = "^4.6.10"
open3d = "^0.19.0"
torch = "^2.7.0"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
